--- a/src/components/allPurpose.css
+++ b/src/components/allPurpose.css
@@ -32,7 +32,7 @@ body{
 	border-radius: 3%;
 }
 
-.submitBtnSuperPissed{
+/* .submitBtn{
 	color:#fff;
 	background-color:#e74c3c;
 	outline: none;
@@ -44,4 +44,4 @@ body{
 	border-radius:2px;
 	cursor:pointer;
 	position:relative;
-}
+} */
